test/src/e2e_vm_tests/test_programs/should_fail/asm_disallowed_opcodes/src/main.sw
script;

pub fn main() {
    asm(r1: 0, r2: 0, r3: 0, r4) {
       log r1 r1 r1 r1;
       log r2 r2 r2 r2;
    };
}
